Publish `0.0.1-HELPWANTED` to advertise for help on plugin portal.

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ plugins {
 	id 'com.diffplug.spotless-changelog'
 }
 
+spotlessChangelog {
+	forceNextVersion '0.0.1-HELPWANTED'
+}
+
 repositories {
 	jcenter()
 }
